tests/integration/typecheck/fail/mismatch_convert_static_record_type_to_dynamic_tail.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::ExtraRow'
#
# [test.metadata.expectation]
# ident = 'b'
{ a = 1, b = 2 } : { a : Number ; Dyn }